WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216152
Tests using OscillatorNode are flaky
https://bugs.webkit.org/show_bug.cgi?id=216152
Summary
Tests using OscillatorNode are flaky
Chris Dumez
Reported
2020-09-03 16:21:11 PDT
Tests using OscillatorNode are flaky.
Attachments
Patch
(27.22 KB, patch)
2020-09-03 17:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(27.22 KB, patch)
2020-09-03 17:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(27.22 KB, patch)
2020-09-03 17:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(25.23 KB, patch)
2020-09-03 18:14 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-03 17:00:47 PDT
Created
attachment 407931
[details]
Patch
Chris Dumez
Comment 2
2020-09-03 17:05:36 PDT
Created
attachment 407932
[details]
Patch
Darin Adler
Comment 3
2020-09-03 17:06:38 PDT
Comment on
attachment 407931
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=407931&action=review
> Source/WebCore/Modules/webaudio/BaseAudioContext.h:466 > + // These are cached per audio context for performance reason. They cannot be
"reason" -> "reasons"
Chris Dumez
Comment 4
2020-09-03 17:22:11 PDT
Created
attachment 407934
[details]
Patch
Chris Dumez
Comment 5
2020-09-03 18:14:10 PDT
Created
attachment 407938
[details]
Patch
EWS
Comment 6
2020-09-03 19:00:05 PDT
Committed
r266570
: <
https://trac.webkit.org/changeset/266570
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407938
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-09-03 19:01:16 PDT
<
rdar://problem/68316059
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug