Tests using OscillatorNode are flaky https://bugs.webkit.org/show_bug.cgi?id=216152

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests.

* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-oscillator-connections-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-oscillatornode-interface/detune-limiting-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-oscillatornode-interface/osc-basic-waveform-expected.txt:

Source/WebCore:

OscillatorNode was caching the different kind of PeriodicWaves in global static
variables. However, the PeriodicWaves are specific to a given sample rate.
As a result, we would sometimes use a cached periodic wave that was using the
wrong sample rate, leading to flaky failures. To address the issue, we now
cache the periodic waves per audio context instead.

No new tests, rebaselined existing tests and unskip them.

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::periodicWave):
* Modules/webaudio/BaseAudioContext.h:
* Modules/webaudio/OscillatorNode.cpp:
(WebCore::OscillatorNode::setType):
* Modules/webaudio/OscillatorNode.h:


Canonical link: https://commits.webkit.org/228959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266570 268f45cc-cd09-0410-ab3c-d52691b4dbfc